<resources>
    <string name="app_name">Web Learning</string>
    <string name="action_settings">Settings</string>
    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="login_label">Log In</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="send_text">Send</string>
    <string name="lorem">Lorem ipsum dolor sit amet</string>
    <string name="title_sign_in">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_password">••••••</string>
    <string name="hint_email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="heading_recent">Recent</string>
    <string name="heading_my_posts">My Posts</string>
    <string name="heading_my_top_posts">My Top Posts</string>
    <string name="driver_post_button_title">Offer New Carpool</string>
    <string name="rider_post_button_title">Request New Carpool</string>
    <string name="driver_feed_title">Ride Requests</string>
    <string name="rider_feed_title">Drive Offers</string>
    <string name="post_label_from">From</string>
    <string name="post_label_to">To</string>
    <string name="post_label_passengerCount">Maximum Passengers</string>
    <string name="post_label_pickupPoint">Pickup Point</string>
    <string name="heading_recent_organizations">All Organizations</string>
    <string name="heading_my_organizations">My Organizations</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_map_detail">MapDetailActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_carpool_detail">CarpoolDetailActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro">hello there&#x0A;
start learning web basics</string>
    <string name="title_activity_new_carpool">NewCarpoolActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="infoprompt">Select One of the Following:</string>
    <string name="enter_info">Enter Your Information</string>
    <string name="info_first">First Name</string>
    <string name="info_last">Last Name</string>
    <string name="info_date">Date of Birth</string>
    <string name="info_phone">(555)555-555</string>
    <string name="info_choose_info">Choose Your Default Organization</string>
    <string name="info_save">Save Information</string>
    <string name="info_skip">Skip This</string>
    <string name="organizations_prompt">Choose an Organization</string>
    <string name="info_join_an_organization">Join an Organization</string>
    <string-array name="organizations_list">
        <item>San Jose State University</item>
        <item>DeAnza College</item>
        <item>West Valley College</item>
    </string-array>
    <string name="title_activity_profile_page">ProfilePageActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="appbar_scrolling_view_behavior">scrool view</string>
    <string name="attr_sum">- All HTML elements can have attributes&#x0A; - The title attribute provides additional tool-tip information&#x0A; - The href attribute provides address information for links&#x0A; - The width and height attributes provide size information for images&#x0A; - The alt attribute provides text for screen readers&#x0A; - At W3Schools we always use lowercase attribute names&#x0A; - At W3Schools we always quote attribute values with double quotes</string>
    <string name="style"><![CDATA[HTML images are defined with the <img> tag. \nThe filename of the image source is specified in the src attribute:]]></string>
    <string name="alt"><![CDATA[Here, a title attribute is added to the <p> element. The value of the title attribute will be displayed as a tooltip when you mouse over the paragraph:]]></string>
    <string name="href"><![CDATA[<a href=www.google.com>This is a link</a>]]></string>
    <string name="src"><![CDATA[<img src=\'img_girl.jpg\'>]]></string>
    <string name="alt1"><![CDATA[<img src=\'img_girl.jpg\' alt=\'Girl with a jacket\'>]]></string>
    <string name="width"><![CDATA[<img src=\'img_girl.jpg\' width=\'500\' height=\'600\'>]]></string>
    <string name="style1"><![CDATA[<p style=\'color:red\'>I am a paragraph</p>]]></string>
    <string name="title"><![CDATA[<p title=\'I\'m a tooltip\'> This is a paragraph. </p>]]></string>
    <string name="parag"><![CDATA[The HTML <p> element defines a paragraph:]]></string>
    <string name="paragraphEx"><![CDATA[<p>This is a paragraph.</p>\n <p>This is another paragraph.</p>]]></string>
    <string name="br"><![CDATA[The HTML <br> element defines a line break.]]></string>
    <string name="brEx"><![CDATA[<p>This is<br>a paragraph<br>with line breaks.</p>]]></string>
    <string name="pre"><![CDATA[The HTML <pre> Element]]></string>
    <string name="preEl"><![CDATA[The HTML <pre> element defines preformatted text.]]></string>
    <string name="preEx"><![CDATA[<pre> My Bonnie lies over the ocean. My Bonnie lies over the sea. My Bonnie lies over the ocean. Oh, bring back my Bonnie to me. </pre>]]></string>
    <string name="styleSyntax"><![CDATA[<tagname style=\'property:value;\'>]]></string>
    <string name="backgroundColor"><![CDATA[<body style=\'background-color:powderblue;\'>\n <h1>This is a heading</h1>\n <p>This is a paragraph.</p> </body>]]></string>
    <string name="textColorEx"><![CDATA[<h1 style=\'color:blue;\'>This is a heading</h1>\n <p style=\'color:red;\'>This is a paragraph.</p>]]></string>
    <string name="fontEx"><![CDATA[<h1 style=\'font-family:verdana;\'>This is a heading</h1> \n<p style=\'font-family:courier;\'>This is a paragraph.</p>]]></string>
    <string name="fontSizeEx"><![CDATA[<h1 style=\'text-align:center;\'>Centered Heading</h1>\n <p style=\'text-align:center;\'>Centered paragraph.</p>]]></string>
    <string name="styleSummury">-Use the style attribute for styling HTML elements&#x0A; -Use background-color for background color&#x0A; -Use color for text colors&#x0A; -Use font-family for text fonts&#x0A; -Use font-size for text sizes&#x0A; -Use text-align for text alignment&#x0A;</string>
    <string name="backgroundColorEx"><![CDATA[<h1 style=\'background-color:DodgerBlue;\'>Hello World</h1>\n <p style=\'background-color:Tomato;\'>Lorem ipsum...</p>]]></string>
    <string name="textColorrEx"><![CDATA[<h1 style=\'color:Tomato;\'>Hello World</h1>\n <p style=\'color:DodgerBlue;\'>Lorem ipsum...</p> <p style=\'color:MediumSeaGreen;\'>Ut wisi enim...</p>]]></string>
    <string name="borderColorEx"><![CDATA[<h1 style=\'border:2px solid Tomato;\'>Hello World</h1>\n <h1 style=\'border:2px solid DodgerBlue;\'>Hello World</h1>\n <h1 style=\'border:2px solid Violet;\'>Hello World</h1>]]></string>
    <string name="hyperLinkEx"><![CDATA[<a href=\'url\'>link text</a>]]></string>
    <string name="localLinkEx"><![CDATA[<a href=\'html_images.asp\'>HTML Images</a>]]></string>
    <string name="colorLinkEx"><![CDATA[<style>\n a:link {\n color: green;\n background-color: transparent;\n text-decoration: none;\n } \n a:visited {\n color: pink;&#x0A; background-color: transparent;&#x0A; text-decoration: none;&#x0A; } &#x0A;a:hover { &#x0A;color: red;&#x0A; background-color: transparent;&#x0A; text-decoration: underline;&#x0A; }&#x0A; a:active {&#x0A; color: yellow;&#x0A; background-color: transparent;&#x0A; text-decoration: underline;&#x0A; }&#x0A; </style>]]></string>
    <string name="linkTarget">The target attribute specifies where to open the linked document.&#x0A; The target attribute can have one of the following values:&#x0A;_blank - Opens the linked document in a new window or tab &#x0A;_self - Opens the linked document in the same window/tab as it was clicked (this is default) &#x0A;_parent - Opens the linked document in the parent frame &#x0A;_top - Opens the linked document in the full body of the window &#x0A;framename - Opens the linked document in a named frame &#x0A;This example will open the linked document in a new browser window/tab:</string>
    <string name="linkTargetEx"><![CDATA[<a href=\'https://www.w3schools.com/\' target=\'_blank\'>Visit W3Schools!</a>]]></string>
    <string name="linkImageEx"><![CDATA[<a href=\'default.asp\'>\n <img src=\'smiley.gif\' alt=\'HTML tutorial\' style=\'width:42px;height:42px;border:0;\'> \n</a>]]></string>
    <string name="linkTitlesEx"><![CDATA[<a href=\'https://www.w3schools.com/html/\' title=\'Go to W3Schools HTML section\'>Visit our HTML Tutorial</a>]]></string>
    <string name="linkExternalEx"><![CDATA[<a href=\'https://www.w3schools.com/html/default.asp\'>HTML tutorial</a>]]></string>
    <string name="linkSummary"><![CDATA[- Use the <a> element to define a link \n - Use the href attribute to define the link address \n - Use the target attribute to define where to open the linked document \n - Use the <img> element (inside <a>) to use an image as a link&#x0A;- ]]></string>
    <string name="imgEx"><![CDATA[<img src=\'pic_trulli.jpg\' alt=\'Italian Trulli\'>]]></string>
    <string name="imageSyntax"><![CDATA[In HTML, images are defined with the <img> tag.&#x0A;&#x0A; The <img> tag is empty, it contains attributes only, and does not have a closing tag.&#x0A;&#x0A; The src attribute specifies the URL (web address) of the image:]]></string>
    <string name="imageTagEx"><![CDATA[<img src=\'url\'>]]></string>
    <string name="altTagEx"><![CDATA[<img src=\'img_chania.jpg\' alt=\'Flowers in Chania\'>]]></string>
    <string name="imageSizeEx"><![CDATA[<img src=\'img_girl.jpg\' alt=\'Girl in a jacket\' style=\'width:500px;height:600px;\'>]]></string>
    <string name="imageSubFolder"><![CDATA[<img src=\'/images/html5.gif\' alt=\'HTML5 Icon\' style=\'width:128px;height:128px;\'>]]></string>
    <string name="imageAsLink"><![CDATA[To use an image as a link, put the <img> tag inside the <a> tag:]]></string>
    <string name="imageAsLinkEx"><![CDATA[<a href=\'default.asp\'>&#x0A; <img src=\'smiley.gif\' alt=\'HTML tutorial\' style=\'width:42px;height:42px;border:0;\'> &#x0A;</a>]]></string>
    <string name="finalQuiz"><u>Start Final Quiz</u></string>
    <string name="blockLevel"><![CDATA[A block-level element always starts on a new line and takes up the full width available (stretches out to the left and right as far as it can).\n The <div> element is a block-level element.\n Examples of block-level elements:\n <div>\n <h1> - <h6>\n <p>\n <form>\n <header>\n <footer>\n <section>]]></string>
    <string name="inlineElement"><![CDATA[An inline element does not start on a new line and only takes up as much width as necessary.\n This is an inline <span> element inside a paragraph.\n Examples of inline elements:\n <span>\n <a>\n <img>]]></string>
    <string name="displayNone"><![CDATA[display: none; is commonly used with JavaScript to hide and show elements without deleting and recreating them.\n Take a look at our last example on this page if you want to know how this can be achieved.\n The <script> element uses display: none; as default.]]></string>
    <string name="displayEx">span {\n display: block;\n }\n li {\n display: inline;\n }</string>
    <string name="hideCssEx">h1.hidden {\n display: none;\n }\n h2.hidden {\n
    visibility: hidden;\n
}</string>
</resources>