<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".html_tag5"
    android:background="@drawable/feed_background">
    <TextView
        android:id="@+id/vv1"
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:text="HTML Paragraphs"
        android:paddingTop="50dp"
        android:textColor="#ffffff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:id="@+id/scrollV"
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:scrollbars="vertical"
        android:fitsSystemWindows="true"

        app:layout_constraintTop_toBottomOf="@id/vv1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/t1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:text="HTML Paragraphs"
                android:textSize="25sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="101dp"
                tools:layout_editor_absoluteY="3dp" />
            <TextView
                android:id="@+id/t11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/parag"
                app:layout_constraintTop_toBottomOf="@+id/t1"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="4dp" />
            <TextView
                android:id="@+id/t111"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:textColor="@color/teal"
                android:text="Example"

                app:layout_constraintTop_toBottomOf="@+id/t11"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="4dp" />
            <TextView
                android:id="@+id/t1111"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/paragraphEx"
                app:layout_constraintTop_toBottomOf="@+id/t111"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="4dp" />
            <View
                android:id="@+id/v1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:background="@color/gray"
                app:layout_constraintTop_toBottomOf="@+id/t1111"
                tools:ignore="MissingConstraints" />


            <TextView
                android:id="@+id/t2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:text="HTML Line Breaks"
                android:textSize="25sp"
                app:layout_constraintTop_toBottomOf="@+id/v1"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="101dp"
                tools:layout_editor_absoluteY="3dp" />
            <TextView
                android:id="@+id/t22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/br"
                app:layout_constraintTop_toBottomOf="@+id/t2"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="4dp" />
            <TextView
                android:id="@+id/t222"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:textColor="@color/teal"
                android:text="Example"

                app:layout_constraintTop_toBottomOf="@+id/t22"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="4dp" />
            <TextView
                android:id="@+id/t2222"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/brEx"
                app:layout_constraintTop_toBottomOf="@+id/t222"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="4dp" />
            <View
                android:id="@+id/v2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:background="@color/gray"
                app:layout_constraintTop_toBottomOf="@+id/t2222"
                tools:ignore="MissingConstraints" />


            <TextView
                android:id="@+id/t3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:text="@string/pre"
                android:textSize="25sp"
                app:layout_constraintTop_toBottomOf="@+id/v2"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="101dp"
                tools:layout_editor_absoluteY="3dp" />
            <TextView
                android:id="@+id/t33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/preEl"
                app:layout_constraintTop_toBottomOf="@+id/t3"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="4dp" />
            <TextView
                android:id="@+id/t333"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:textColor="@color/teal"
                android:text="Example"

                app:layout_constraintTop_toBottomOf="@+id/t33"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="4dp" />
            <TextView
                android:id="@+id/t3333"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/preEx"
                app:layout_constraintTop_toBottomOf="@+id/t333"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="4dp" />
            <View
                android:id="@+id/v3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:background="@color/gray"
                app:layout_constraintTop_toBottomOf="@+id/t3333"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>