<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/home_page"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/app_name"
        android:textColor="@color/maroon"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:padding="30dp"

        android:clipToPadding="false">

        <TextView
            android:layout_width="200dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/intro"
            android:maxLines="2"
            android:lines="2"
            android:textColor="@color/brown"
            android:layout_marginBottom="30dp"
            android:gravity="center_horizontal" />

        <Button
            android:id="@+id/html"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:drawableLeft="@drawable/ic_directions_car_white_24dp"
            android:elevation="10dp"
            android:onClick="startHTML"
            android:text="HTML" />

        <Button
            android:id="@+id/css"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:drawableLeft="@drawable/ic_person_pin_white_24dp"
            android:elevation="10dp"
            android:onClick="startCSS"
            android:text="CSS" />

        <Button
            android:id="@+id/javascript"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/ic_directions_car_white_24dp"
            android:elevation="10dp"
            android:onClick="startJavaScript"
            android:text="JavaScript" />
        <TextView
            android:layout_width="200dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="Finish Web learning Course?"
            android:maxLines="1"
            android:padding="4dp"
            android:textColor="@color/blue"
            android:gravity="center_horizontal" />
        <Button
            android:layout_width="120dp"
            android:textAlignment="center"
            android:layout_height="32dp"
            android:text="@string/finalQuiz"
            android:padding="4dp"
            android:onClick="startFinalQuiz"
            android:background="@drawable/button_login"
            android:elevation="10dp"
            android:layout_marginBottom="30dp"
            android:gravity="center_horizontal" />
    </LinearLayout>


</RelativeLayout>
