<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/feed_background"
    tools:context=".css_tag10">
    <TextView
        android:id="@+id/vv1"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:text="display Property"
        android:paddingTop="50dp"
        android:textColor="#ffffff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:id="@+id/scrollV"
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:scrollbars="vertical"
        android:fitsSystemWindows="true"

        app:layout_constraintTop_toBottomOf="@id/vv1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/t1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/green"
                android:text="Block-level Elements"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"

                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="101dp"
                tools:layout_editor_absoluteY="3dp" />
            <TextView
                android:id="@+id/t11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/blockLevel"
                app:layout_constraintTop_toBottomOf="@+id/t1"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="4dp" />

            <View
                android:id="@+id/v1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:background="@color/gray"
                app:layout_constraintTop_toBottomOf="@+id/t11"
                tools:ignore="MissingConstraints" />
            <TextView
                android:id="@+id/t2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/green"
                android:text="Inline Elements"
                android:textSize="25sp"
                app:layout_constraintTop_toBottomOf="@+id/v1"

                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="101dp"
                tools:layout_editor_absoluteY="3dp" />
            <TextView
                android:id="@+id/t22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/inlineElement"
                app:layout_constraintTop_toBottomOf="@+id/t2"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="4dp" />

            <View
                android:id="@+id/v2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:background="@color/gray"
                app:layout_constraintTop_toBottomOf="@+id/t22"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/t3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/green"
                android:text="Display: none"
                android:textSize="25sp"
                app:layout_constraintTop_toBottomOf="@+id/v2"

                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="101dp"
                tools:layout_editor_absoluteY="3dp" />
            <TextView
                android:id="@+id/t33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/displayNone"
                app:layout_constraintTop_toBottomOf="@+id/t3"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="4dp" />
            <TextView
                android:id="@+id/t333"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:textColor="@color/teal"
                android:text="Example"

                app:layout_constraintTop_toBottomOf="@+id/t33"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="4dp" />
            <TextView
                android:id="@+id/t3333"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/displayEx"
                app:layout_constraintTop_toBottomOf="@+id/t333"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="4dp" />
            <View
                android:id="@+id/v3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:background="@color/gray"
                app:layout_constraintTop_toBottomOf="@+id/t3333"
                tools:ignore="MissingConstraints" />
            <TextView
                android:id="@+id/t4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/green"
                android:text="display:none or visibility:hidden?"
                android:textSize="25sp"

                app:layout_constraintTop_toBottomOf="@+id/v3"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="101dp"
                tools:layout_editor_absoluteY="3dp" />


            <LinearLayout
                android:id="@+id/t45"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/t4">

                <ImageView
                    android:id="@+id/im1"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:src="@drawable/atrium"
                  />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp">
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:onClick="hide"
                        android:layout_weight="1"
                        android:layout_marginTop="4dp"
                        android:text="Hide"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:onClick="remove"
                        android:layout_weight="1"
                        android:layout_marginTop="4dp"
                        android:text="Show"/>
                </LinearLayout>
            </LinearLayout>



            <TextView
                android:id="@+id/t44"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:text="display: none; Hiding an element can be done by setting the display property to none. The element will be hidden, and the page will be displayed as if the element is not there\n
                visibility:hidden; also hides an element./n
However, the element will still take up the same space as before. The element will be hidden, but still affect the layout:
"
                app:layout_constraintTop_toBottomOf="@+id/t45"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="4dp" />
            <TextView
                android:id="@+id/t444"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:textColor="@color/teal"
                android:text="Example"

                app:layout_constraintTop_toBottomOf="@+id/t44"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="4dp" />
            <TextView
                android:id="@+id/t4444"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/hideCssEx"
                app:layout_constraintTop_toBottomOf="@+id/t444"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="4dp" />
            <View
                android:id="@+id/v4"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:background="@color/gray"
                app:layout_constraintTop_toBottomOf="@+id/t4444"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>